lang/checker/tests/cases/pass/resolve-type-match/callback/missing_argument.slt
type A = (value: any) -> void
local a: A = function() end