lang/checker/tests/cases/fail/resolve-type-match/callback/unmatched_param.slt
type A = (a: string, b: number) -> void
local a: A = function(a: number)
end
